--- a/public/index.html
+++ b/public/index.html
@@ -86,39 +86,64 @@
                     <button class="close-btn" id="closeSettings">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <h3>External API Settings</h3>
-                    <div class="form-group" style="display: flex; align-items: center; justify-content: space-between; padding: 15px; background: var(--bg-tertiary); border-radius: 4px; margin-bottom: 20px;">
-                        <div>
-                            <label for="externalApiToggle" style="font-weight: 600; margin-bottom: 5px; display: block;">Enable External API Calls</label>
-                            <small style="color: var(--text-secondary);">Allow fetching stats and project details from external servers</small>
+                    <!-- Settings Tabs -->
+                    <div class="settings-tabs">
+                        <button class="settings-tab active" data-settings-tab="general">General</button>
+                        <button class="settings-tab" data-settings-tab="css">CSS</button>
+                    </div>
+                    
+                    <!-- General Tab -->
+                    <div id="generalSettingsTab" class="settings-tab-content active">
+                        <h3>External API Settings</h3>
+                        <div class="form-group" style="display: flex; align-items: center; justify-content: space-between; padding: 15px; background: var(--bg-tertiary); border-radius: 4px; margin-bottom: 20px;">
+                            <div>
+                                <label for="externalApiToggle" style="font-weight: 600; margin-bottom: 5px; display: block;">Enable External API Calls</label>
+                                <small style="color: var(--text-secondary);">Allow fetching stats and project details from external servers</small>
+                            </div>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="externalApiToggle" checked>
+                                <span class="toggle-slider"></span>
+                            </label>
                         </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="externalApiToggle" checked>
-                            <span class="toggle-slider"></span>
-                        </label>
-                    </div>
-                    <h3 style="margin-top: 40px;">Extreme Overclocking</h3>
-                    <div class="form-group">
-                        <label for="eocUserId">EOC User ID:</label>
-                        <input type="number" id="eocUserId" placeholder="e.g., 833191" min="1">
-                        <small style="color: var(--text-secondary); display: block; margin-top: 5px;">
-                            Find your EOC User ID by visiting 
-                            <a href="https://folding.extremeoverclocking.com/user_summary.php" target="_blank" style="color: var(--accent);">
-                                folding.extremeoverclocking.com
-                            </a> and checking the URL (e.g., ?u=833191)
-                        </small>
-                    </div>
-                    <button type="button" class="btn btn-primary" id="saveEOCUserId">Save EOC User ID</button>
-                    <h3 style="margin-top: 40px;">Team Configuration</h3>
-                    <form id="addTeamForm">
+                        <h3 style="margin-top: 40px;">Extreme Overclocking</h3>
                         <div class="form-group">
-                            <label for="teamNumber">Team Number:</label>
-                            <input type="number" id="teamNumber" required placeholder="e.g., 123456">
+                            <label for="eocUserId">EOC User ID:</label>
+                            <input type="number" id="eocUserId" placeholder="e.g., 833191" min="1">
+                            <small style="color: var(--text-secondary); display: block; margin-top: 5px;">
+                                Find your EOC User ID by visiting 
+                                <a href="https://folding.extremeoverclocking.com/user_summary.php" target="_blank" style="color: var(--accent);">
+                                    folding.extremeoverclocking.com
+                                </a> and checking the URL (e.g., ?u=833191)
+                            </small>
                         </div>
-                        <button type="submit" class="btn btn-primary">Add Team</button>
-                    </form>
-                    <h3 style="margin-top: 40px;">Configured Teams</h3>
-                    <div id="teamsList"></div>
+                        <button type="button" class="btn btn-primary" id="saveEOCUserId">Save EOC User ID</button>
+                        <h3 style="margin-top: 40px;">Team Configuration</h3>
+                        <form id="addTeamForm">
+                            <div class="form-group">
+                                <label for="teamNumber">Team Number:</label>
+                                <input type="number" id="teamNumber" required placeholder="e.g., 123456">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Add Team</button>
+                        </form>
+                        <h3 style="margin-top: 40px;">Configured Teams</h3>
+                        <div id="teamsList"></div>
+                    </div>
+                    
+                    <!-- CSS Tab -->
+                    <div id="cssSettingsTab" class="settings-tab-content">
+                        <h3>Custom CSS</h3>
+                        <div class="form-group">
+                            <label for="customCss">Enter your custom CSS:</label>
+                            <textarea id="customCss" rows="20" style="width: 100%; font-family: 'Courier New', monospace; background: var(--bg-tertiary); color: var(--text-primary); border: 1px solid var(--border); border-radius: 4px; padding: 10px; resize: vertical;" placeholder="/* Your custom CSS here */
+.example {
+    color: #ff6b35;
+}"></textarea>
+                            <small style="color: var(--text-secondary); display: block; margin-top: 5px;">
+                                Add custom CSS to style the application. Changes are applied immediately when you save.
+                            </small>
+                        </div>
+                        <button type="button" class="btn btn-primary" id="saveCustomCss">Save CSS</button>
+                    </div>
                 </div>
             </div>
         </div>
